@@ -2,8 +2,11 @@
 import unittest
 import os, signal, time
 import traceback
+import mmap
 
-version = '0.1.22'.replace('.', 'd')
+version = '0.1.23'.replace('.', 'd')
+
+verbose = False
 
 fs = os.path.expanduser('~/test/0install')
 cache = os.path.expanduser('~/test/cache')
@@ -58,7 +61,7 @@ def cstest(base):
 			for x in range(10):
 				died, status = os.waitpid(child, os.WNOHANG)
 				if died == child:
-					if status:
+					if status and not error:
 						error = Exception('Error in child')
 					break
 				time.sleep(0.1)
@@ -66,7 +69,8 @@ def cstest(base):
 				print "Killing", child
 				os.kill(child, signal.SIGTERM)
 				os.waitpid(child, 0)
-				error = Exception('Error in child')
+				if not error:
+					error = Exception('Error in child')
 			if error:
 				raise error or Exception("Child didn't quit")
 	return test
@@ -96,7 +100,8 @@ class Test1WithoutHelper(LazyFS):
 
 class Test2WithHelper(WithHelper):
 	def read_rq(self):
-		#print "Reading request..."
+		if verbose:
+			print "Reading request..."
 		fd = os.read(self.c, 1000)
 		return int(fd.split(' ', 1)[0])
 	
@@ -167,31 +172,44 @@ class Test2WithHelper(WithHelper):
 	test5GetROX = cstest('GetROX')
 
 	def put_dir(self, dir, contents):
+		"""contents is None for a dynamic directory"""
 		f = file(cache + dir + '/....', 'w')
-		if contents:
+		if contents is None:
+			f.write('LazyFS Dynamic\n')
+		elif contents:
 			f.write('LazyFS\n' + '\0'.join(contents) + '\0')
 		else:
 			f.write('LazyFS\n')
 		f.close()
 		os.rename(cache + dir + '/....', cache + dir + '/...')
 
-	def send_dir(self, dir, contents):
+	def send_dir(self, dir, contents = None):
 		assert dir.startswith('/')
 		fd, path = self.next()
-		#print "Got request for ", dir
+		if verbose:
+			print "Got request for ", dir
 		self.assertEquals(dir, path)
 		self.put_dir(dir, contents)
 		os.close(fd)
 	
 	def send_file(self, rq, contents, mtime):
 		assert rq.startswith('/')
-		#print "Expecting", rq
+		if verbose:
+			print "Expecting", rq
 		fd, path = self.next()
 		self.assertEquals(rq, path)
 		f = file(cache + rq, 'w')
 		f.write(contents)
 		f.close()
 		os.utime(cache + rq, (mtime, mtime))
+		os.close(fd)
+
+	def send_reject(self, rq):
+		assert rq.startswith('/')
+		fd, path = self.next()
+		self.assertEquals(rq, path)
+		if verbose:
+			print "Rejecting", rq
 		os.close(fd)
 
 	def clientDownload(self):
@@ -211,6 +229,100 @@ class Test2WithHelper(WithHelper):
 		self.send_file('/hello', 'Worlds', 3)
 
 	test6Download = cstest('Download')
+
+	def clientDynamic(self):
+		assert not os.path.exists(cache + '/...')
+		self.assert_ls(fs + '/', ['.lazyfs-cache', '.lazyfs-helper'])
+		assert os.path.isdir(fs + '/dir')
+		self.assert_ls(fs + '/dir', ['hello'])
+		assert os.path.isdir(cache + '/dir')
+		os.spawnlp(os.P_WAIT, 'rm', 'rm', '-r', '--', cache + '/dir')
+		assert not os.path.isdir(cache + '/dir')
+		assert not os.path.isdir(fs + '/dir')
+		assert not os.path.isdir(fs + '/foo')
+	
+	def serverDynamic(self):
+		self.send_dir('/')
+		os.mkdir(cache + '/dir')
+		self.send_dir('/dir', ['f 5 3 hello'])
+		self.send_reject('/dir')
+		self.send_reject('/dir')
+		self.send_reject('/foo')
+		
+	test7Dynamic = cstest('Dynamic')
+
+	def clientMMap1(self):
+		# File is changed in-place
+		fd = os.open(fs + '/hello', os.O_RDONLY)
+		m = mmap.mmap(fd, 5, mmap.MAP_SHARED, mmap.PROT_READ)
+		os.close(fd)
+		self.assertEquals('Hello', m[:])
+		self.put_dir('/', ['f 6 3 hello'])
+		file(fs + '/hello').read()	# Force update
+		self.assertEquals('Worlds', file(cache + '/hello').read())
+		self.assertEquals('World', m[:])
+	
+	def serverMMap1(self):
+		self.send_dir('/', ['f 5 3 hello'])
+		self.send_file('/hello', 'Hello', 3)
+		self.send_file('/hello', 'Worlds', 3)
+
+	test8MMap1 = cstest('MMap1')
+
+	def clientMMap2(self):
+		# A new file is created
+		fd = os.open(fs + '/hello', os.O_RDONLY)
+		m = mmap.mmap(fd, 5, mmap.MAP_SHARED, mmap.PROT_READ)
+		os.close(fd)
+		self.assertEquals('Hello', m[:])
+		self.put_dir('/', ['f 6 3 hello'])
+		os.unlink(cache + '/hello')
+		self.assertEquals('Worlds', file(fs + '/hello').read())
+		self.assertEquals('Hello', m[:])
+
+		fd = os.open(fs + '/hello', os.O_RDONLY)
+		m2 = mmap.mmap(fd, 5, mmap.MAP_SHARED, mmap.PROT_READ)
+		self.assertEquals('Hello', m[:])
+		self.assertEquals('World', m2[:])
+		os.close(fd)
+	
+	serverMMap2 = serverMMap1
+	
+	test8MMap2 = cstest('MMap2')
+
+	def clientMMap3(self):
+		# A new file is created in the cache, but the lazyfs
+		# inode remains the same.
+		# We can't support this, because Linux mappings are
+		# per-inode, not per-open-file, however we make sure the kernel
+		# handles it gracefully (newer 2.6 kernels may provide a way to
+		# fix the underlying problem, but it's not a big issue).
+		fd = os.open(fs + '/hello', os.O_RDONLY)
+		m = mmap.mmap(fd, 5, mmap.MAP_SHARED, mmap.PROT_READ)
+		os.close(fd)
+		self.assertEquals('Hello', m[:])
+		os.unlink(cache + '/hello')
+		self.assertEquals('World', file(fs + '/hello').read())
+		self.assertEquals('Hello', m[:])
+
+		fd = os.open(fs + '/hello', os.O_RDONLY)
+		try:
+			mmap.mmap(fd, 5, mmap.MAP_SHARED, mmap.PROT_READ)
+			assert False
+		except (IOError, EnvironmentError):
+			# (I think EnvironmentError is a Python bug; it should
+			# report the -EBUSY from mmap, but it actually reports
+			# the error from the following msync)
+			pass
+		self.assertEquals('Hello', m[:])
+		os.close(fd)
+	
+	def serverMMap3(self):
+		self.send_dir('/', ['f 5 3 hello'])
+		self.send_file('/hello', 'Hello', 3)
+		self.send_file('/hello', 'World', 3)
+	
+	test8MMap3 = cstest('MMap3')
 	
 if __name__ == '__main__':
 	import sys
